--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "p-et-alia",
   "version": "0.0.2",
-  "description": "TBD",
+  "description": "Declaratively pass properties between DOM elements",
   "main": "p-et-alia.js",
   "repository": {
     "type": "git",
@@ -24,7 +24,7 @@
     "test": "node createIIFE.js && tape test/*.js",
     "serve": "node node_modules/xtal-test/serve.js"
   },
-  "author": "",
+  "author": "anderson.bruce.b@gmail.com",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bahrus/p-et-alia/issues"
