--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "xtal-element": "0.0.81",
-    "trans-render": "0.0.130"
+    "trans-render": "0.0.130",
+    "xtal-state": "0.0.85"
   },
   "devDependencies": {
     "@types/node": "12.0.7",
