--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "purr-sist": "0.0.60"
   },
   "scripts": {
-    "test": " && node tape test/*.js",
+    "test": "tape test/*.js",
     "serve": "node node_modules/xtal-test/serve.js",
     "doc": "wca analyze p-*.js --outFile custom-elements.json"
   },
