--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,5 +12,6 @@ jobs:
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a multi-line script
-      run: npm run test
-      
+      run: npm install
+        npm run test
+
