--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,9 +9,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        version: 12
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a multi-line script
-      run: npm install
-        npm run test
+      run: npm npm-install-ci-test
 
