--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,5 +15,5 @@ jobs:
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a multi-line script
-      run: npm npm-install-ci-test
+      run: npm install-ci-test
 
