--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "xtal-state": "0.0.100"
   },
   "devDependencies": {
-    "@types/node": "12.12.0",
+    "@types/node": "12.12.8",
     "@types/tape": "4.2.33",
     "@webcomponents/webcomponentsjs": "2.3.0",
     "jiife": "0.0.14",
     "tape": "4.11.0",
+    "if-diff": "0.0.39",
     "xtal-test": "0.0.21",
     "xtal-json-editor": "0.0.41",
     "xtal-json-merge": "0.2.38",
