--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "xtal-json-merge": "0.2.38",
     "es-module-shims": "0.4.6",
     "aggregator-fn": "0.0.18",
-    "purr-sist": "0.0.60"
+    "purr-sist": "0.0.60",
+    "templ-mount": "0.0.56"
   },
   "scripts": {
     "test": "node test/test-all.js",
