--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "url": "git+https://github.com/bahrus/p-et-alia.git"
   },
   "dependencies": {
-    "xtal-element": "0.0.214",
-    "trans-render": "0.0.207",
-    "xtal-state": "0.0.112"
+    "xtal-element": "0.0.229",
+    "trans-render": "0.0.215",
+    "xtal-state": "0.0.113",
+    "css-observe": "0.0.22"
   },
   "devDependencies": {
     "@webcomponents/webcomponentsjs": "2.4.3",
@@ -22,7 +23,7 @@
     "xtal-json-merge": "0.2.39",
     "es-module-shims": "0.4.7",
     "aggregator-fn": "0.0.24",
-    "purr-sist": "0.0.70",
+    "purr-sist": "0.0.71",
     "templ-mount": "0.0.57"
   },
   "scripts": {
