--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "es-module-shims": "0.5.2",
     "aggregator-fn": "0.0.24",
     "purr-sist": "0.0.71",
-    "templ-mount": "0.0.58"
+    "templ-mount": "0.0.58",
+    "@rollup/plugin-node-resolve": "9.0.0",
+    "terser": "5.3.3"
   },
   "scripts": {
     "test": "node test/test-all.js",
     "serve": "node node_modules/xtal-test/serve.js",
-    "doc": "wca analyze p-*.js --outFile custom-elements.json"
+    "doc": "wca analyze p-*.js --outFile custom-elements.json",
+    "bundle": "rollup --config",
+    "compress": "node minify"
   },
   "author": "anderson.bruce.b@gmail.com",
   "license": "MIT",
